ajustes de codigo seguindo sugestoes do sonarLint